# game_2048_humanplayer

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
