[package]
name = "game_2048_humanplayer"
version = "0.1.0"
authors = ["Johan Ullén <johan.ullen@sentian.ai>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.7.3"

[dependencies.sdl2]
version = "0.33.0"
default_features = true

[dependencies.game_2048_view]
# git = "https://github.com/dus-study/game_2048_view.git"
path = "../game_2048_view"

[dependencies.game_2048_model]
path = "../game_2048_model"